Updated Data access section with the requirement to link to homepage. Updated spacing in Data Access section Changed color of visit home page Fixed issue with files count in Files section Fixed reference section to avoid multiple new lines Fixed breaking identifier section Updated citation with header color and fonts Updated fonts everywhere under Description section. Found issue with nginx proxy server and also removed pdr for /about page Fixed issue with the url with arkid

--- a/angular/src/app/landing/landing.component.css
+++ b/angular/src/app/landing/landing.component.css
@@ -186,6 +186,13 @@
   height: 1.5em;
 }
 
+:host /deep/  .ui-dialog .ui-dialog-titlebar{
+  background-color: #f1f1f1;
+  color: #212121;
+  font-family: sans-serif;
+  font-size: 16px;
+}
+
 :host /deep/ .ui-treetable-resizable .ui-treetable-thead > tr > th{
   background-color: #1E6BA1;
   /* border-color: coral; */
